fixes: margin too close to header image fixed

--- a/mentors.css
+++ b/mentors.css
@@ -512,3 +512,16 @@ body{
 }
 
 }
+
+@media(max-width: 332px){
+	.sec1 {
+		margin-top: 20em;
+	}
+
+	.ment-title h2 {
+
+	font-size: 24px;
+
+	}
+
+}
